Auth Lists reports code

--- a/source-code/py-notebook/ACT-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/ACT-conservation-sensitive.ipynb
@@ -8,8 +8,8 @@
     "This notebook downloads the ACT lists from the ACT Government Open Data Portal and readies them for ingestion into the ALA Lists tool. It will save original lists to the source-data/ACT directory, process the lists and save them to current-lists. The lists can be loaded into the lists-test environment then reviewed by following the instructions below.\n",
     "\n",
     "## Lists in the ALA Species List tool\n",
-    "Conservation list: [dr649](https://lists.ala.org.au/speciesListItem/list/dr649) ([in test](https://lists-test.ala.org.au/speciesListItem/list/dr649))\n",
-    "Sensitive list: [dr2627](https://lists.ala.org.au/speciesListItem/list/dr649) ([in test](https://lists.ala.org.au/speciesListItem/list/dr2627))\n",
+    "Conservation list: [dr649](https://lists.ala.org.au/speciesListItem/list/dr649) ([dr649 in test](https://lists-test.ala.org.au/speciesListItem/list/dr649))\n",
+    "Sensitive list: [dr2627](https://lists.ala.org.au/speciesListItem/list/dr2627) ([dr2627 in test](https://lists.ala.org.au/speciesListItem/list/dr2627))\n",
     "\n",
     "## Sources\n",
     "\n",
@@ -34,8 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\Program Files (x86)\\\\JetBrains\\\\PyCharm 2021.2.1\\\\plugins\\\\python\\\\helpers-pro\\\\jupyter_debug', 'C:\\\\Program Files (x86)\\\\JetBrains\\\\PyCharm 2021.2.1\\\\plugins\\\\python\\\\helpers\\\\pydev', 'C:\\\\Users\\\\oco115\\\\PycharmProjects\\\\authoritative-lists\\\\source-code\\\\py-notebook', 'C:\\\\Users\\\\oco115\\\\PycharmProjects\\\\authoritative-lists', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\python39.zip', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\DLLs', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\lib', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject', '', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\lib\\\\site-packages', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\oco115\\\\Anaconda3\\\\envs\\\\scientificProject\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\oco115\\\\.ipython', 'C:\\\\Users\\\\oco115\\\\PycharmProjects\\\\authoritative-lists\\\\source-code\\\\includes', 'C:\\\\Users\\\\oco115\\\\PycharmProjects\\\\authoritative-lists\\\\source-code\\\\includes']\n"
+     ]
+    }
+   ],
    "source": [
     "# set up\n",
     "import pandas as pd\n",
@@ -55,7 +63,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
-    "import list_functions as lf"
+    "import list_functions as lf\n"
    ],
    "metadata": {
     "collapsed": false,
