--- a/source-code/py-notebook/QLD-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/QLD-conservation-sensitive.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "\n",
     "## Lists in the ALA Species List tool\n",
-    "* Conservation list: __[dr652](https://lists.ala.org.au/speciesListItem/list/dr652)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr652))\n",
-    "* Sensitive list: __[dr493](https://lists.ala.org.au/speciesListItem/list/dr493)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr18404))\n",
-    "* Collection: __[dr652](https://collections.ala.org.au/public/show/dr652)__  __[dr493](https://collections.ala.org.au/public/show/dr493)__\n",
+    "* Conservation list: __[dr652](https://lists.ala.org.au/speciesListItem/list/dr652)__ ([dr652 in test](https://lists-test.ala.org.au/speciesListItem/list/dr652))\n",
+    "* Sensitive list: __[dr493](https://lists.ala.org.au/speciesListItem/list/dr493)__ ([dr18404 in test](https://lists-test.ala.org.au/speciesListItem/list/dr18404))\n",
+    "* Collection: __[dr652](https://collections.ala.org.au/public/show/dr652)__  __[dr493 in test](https://collections.ala.org.au/public/show/dr493)__\n",
     "\n",
     "## Source Data\n",
     "Queensland Nature Conservation Act 1992\n",
