--- a/source-code/py-notebook/TAS-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/TAS-conservation-sensitive.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Tas Conservation List\n",
     "## List Identifiers\n",
     "* Conservation list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
+    "* Sensitive list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
     "* Collection: __[dr654](https://collections.ala.org.au/public/show/dr654)__ __[dr491](https://collections.ala.org.au/public/show/dr491)__\n",
     "\n",
     "## Source Data\n",
@@ -23,7 +26,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
