--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -10,8 +10,8 @@
     "The lists can be loaded into the lists-test environment then reviewed by following the instructions below.\n",
     "\n",
     "## Lists in the ALA Species List tool\n",
-    "* Conservation list: __[dr655](https://lists.ala.org.au/speciesListItem/list/dr655)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr655))\n",
-    "* Sensitive list: __[dr490](https://lists.ala.org.au/speciesListItem/list/dr490)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr18669))\n",
+    "* Conservation list: __[dr655](https://lists.ala.org.au/speciesListItem/list/dr655)__ (dr655 in [test](https://lists-test.ala.org.au/speciesListItem/list/dr655))\n",
+    "* Sensitive list: __[dr490](https://lists.ala.org.au/speciesListItem/list/dr490)__ (dr18669 in [test](https://lists-test.ala.org.au/speciesListItem/list/dr18669))\n",
     "\n",
     "* Collection: __[dr655](https://collections.ala.org.au/public/show/dr655)__ __[dr490](https://collections.ala.org.au/public/show/dr490)__\n",
     "\n",
