New Change-log-report notebook. New downloads for historical lists.

--- a/source-code/py-notebook/change-log-report.ipynb
+++ b/source-code/py-notebook/change-log-report.ipynb
@@ -38,11 +38,9 @@
     "import datetime\n",
     "import os\n",
     "import sys\n",
-    "# import pandas as pd\n",
     "sys.path.append(os.path.abspath(projectdir + \"source-code/includes\"))\n",
-    "# import configuration as config\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m%d')\n",
-    "import list_functions as lf\n"
+    "import list_functions as lf"
    ],
    "metadata": {
     "collapsed": false,
@@ -431,23 +429,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished downloading historical list\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "# cons_drList = {\"ACT\":\"dr649\", \"NSW\":\"dr650\", \"NT\":\"dr651\", \"QLD\":\"dr652\", \"SA\":\"dr653\", \"TAS\":\"dr654\", \"VIC\":\"dr655\", \"EPBC\":\"dr656\", \"WA\":\"dr2201\"}\n",
-    "# sens_drList = {\"ACT\":\"dr649\", \"NSW\":\"dr487\", \"NT\":\"dr492\", \"QLD\":\"dr493\", \"SA\":\"dr884\",\"TAS\":\"dr491\", \"VIC\":\"dr490\", \"WA\":\"dr467\"}\n",
-    "# prodList = lf.download_ala_list(drList)  # save the prod list to the historical lists directory\n",
-    "# prodList = lf.kvp_to_columns(prodList)\n",
-    "# prodList.to_csv(projectdir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "# print('Finished downloading historical list')"
+    "drList = {\"ACT\":\"dr649\", \"NSW\":\"dr650\", \"NT\":\"dr651\", \"QLD\":\"dr652\", \"SA\":\"dr653\", \"TAS\":\"dr654\", \"VIC\":\"dr655\", \"EPBC\":\"dr656\", \"WA\":\"dr2201\"}\n",
+    "# Conservation lists\n",
+    "for state, dr in drList.items():\n",
+    "    filename = state + \"-\" + dr + \"-conservation.csv\"\n",
+    "    print(dr)\n",
+    "    prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + dr + \"?max=10000&includeKVP=true\"\n",
+    "    prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "    prodList = lf.kvp_to_columns(prodList)\n",
+    "    prodList.to_csv(projectdir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading conservation historical list')"
    ],
    "metadata": {
     "collapsed": false,
@@ -457,85 +451,22 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "### Sensitive List - Download old and new and compare"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                       name        commonName_new  \\\n25                     Pedionomus torquatus       Plains-wanderer   \n98   Isotoma fluviatilis subsp. fluviatilis                  None   \n120                Cyclodomorphus praealtus  Alpine She-oak Skink   \n7                         Lathamus discolor                   NaN   \n\n                         scientificName_new listUpdate commonName_old  \\\n25                     Pedionomus torquatus      added            NaN   \n98   Isotoma fluviatilis subsp. fluviatilis      added            NaN   \n120                Cyclodomorphus praealtus      added            NaN   \n7                                       NaN    removed   Swift Parrot   \n\n    scientificName_old  \n25                 NaN  \n98                 NaN  \n120                NaN  \n7    Lathamus discolor  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>commonName_new</th>\n      <th>scientificName_new</th>\n      <th>listUpdate</th>\n      <th>commonName_old</th>\n      <th>scientificName_old</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>25</th>\n      <td>Pedionomus torquatus</td>\n      <td>Plains-wanderer</td>\n      <td>Pedionomus torquatus</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>Isotoma fluviatilis subsp. fluviatilis</td>\n      <td>None</td>\n      <td>Isotoma fluviatilis subsp. fluviatilis</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>120</th>\n      <td>Cyclodomorphus praealtus</td>\n      <td>Alpine She-oak Skink</td>\n      <td>Cyclodomorphus praealtus</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Lathamus discolor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>removed</td>\n      <td>Swift Parrot</td>\n      <td>Lathamus discolor</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "\n",
-    "# %%script echo skipping # comment this line to run this code\n",
-    "\n",
-    "import datetime\n",
-    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "ltype = \"S\"\n",
-    "# conservation\n",
-    "filename = \"NSW-sensitive.csv\"\n",
-    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr487\" + \"?max=10000&includeKVP=true\"\n",
-    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18457\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
-    "# save the lists locally\n",
-    "changelist.to_csv(projectdir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "\n",
-    "changelist"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Download Production lists to Historical List directory"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished downloading historical list\n"
-     ]
-    }
-   ],
-   "source": [
-    "# %%script echo skipping # comment this line to download the files and save locally\n",
-    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectdir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "print('Finished downloading historical list')"
+    "# Sensitive Lists\n",
+    "# drList = {\"TAS\":\"dr491\"}  # Notebook is dying on empty kvpValues when in Jupyter notebook. runs fine in py script\n",
+    "# drList = {\"ACT\":\"dr2627\", \"NSW\":\"dr487\", \"NT\":\"dr492\", \"QLD\":\"dr493\", \"SA\":\"dr884\",\"TAS\":\"dr491\", \"VIC\":\"dr490\", \"WA\":\"dr467\"}\n",
+    "drList = {\"ACT\":\"dr2627\", \"NSW\":\"dr487\", \"NT\":\"dr492\", \"QLD\":\"dr493\", \"SA\":\"dr884\", \"VIC\":\"dr490\", \"WA\":\"dr467\"}\n",
+    "for state, dr in drList.items():\n",
+    "    filename = state + \"-\" + dr + \"-sensitive.csv\"\n",
+    "    print(dr)\n",
+    "    prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + dr + \"?max=10000&includeKVP=true\"\n",
+    "    prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "    prodList = lf.kvp_to_columns(prodList)\n",
+    "    prodList.to_csv(projectdir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading sensitive historical list')"
    ],
    "metadata": {
     "collapsed": false,
