--- a/source-code/py-notebook/QLD-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/QLD-conservation-sensitive.ipynb
@@ -88,6 +88,7 @@
     "import list_functions as lf\n",
     "\n",
     "sourceDataDir = projectDir + \"source-data/QLD/\"\n",
+    "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "\n",
     "codesurl =  \"https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species-status-codes.csv\"\n",
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# %%script echo skipping # comment this line to download dataset from API\n",
@@ -158,18 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   Code       Code_description\n17    C          Least concern\n18   CR  Critically Endangered\n19    E             Endangered\n20   EX                Extinct\n21    I          International\n22   NT        Near Threatened\n23   PE    Extinct in the wild\n24   SL  Special least concern\n25    V             Vulnerable",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Code</th>\n      <th>Code_description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>17</th>\n      <td>C</td>\n      <td>Least concern</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>CR</td>\n      <td>Critically Endangered</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>E</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>EX</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>I</td>\n      <td>International</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>NT</td>\n      <td>Near Threatened</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>PE</td>\n      <td>Extinct in the wild</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>SL</td>\n      <td>Special least concern</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>V</td>\n      <td>Vulnerable</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 13,
+   "outputs": [],
    "source": [
     "speciescodes = pd.read_csv(sourceDataDir + \"species-status-codes.csv\")\n",
     "ncastatuscodes = speciescodes[speciescodes['Field'] == \"NCA_status\"][['Code', 'Code_description']]\n",
@@ -178,9 +169,7 @@
     "    ncastatuscodes['Code_description'] == \"Critically endangered\", 'Code_description'] = \"Critically Endangered\"\n",
     "ncastatuscodes.loc[ncastatuscodes['Code_description'] == \"Near threatened\", 'Code_description'] = \"Near Threatened\"\n",
     "endemicitycodes = speciescodes[speciescodes['Field'] == \"Endemicity\"][['Code', 'Code_description']]\n",
-    "# ebpc codes\n",
-    "epbccodes = speciescodes[speciescodes['Field'] == \"EPBC_status\"][['Code', 'Code_description']]\n",
-    "ncastatuscodes"
+    "epbccodes = speciescodes[speciescodes['Field'] == \"EPBC_status\"][['Code', 'Code_description']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -197,7 +186,8 @@
     "* Join to the codes to expand the code descriptions.\n",
     "* Change the field names to `sourceStatus` and `status` as required by the ALA's conservation list processing.\n",
     "* Remove **Least concern** and no status\n",
-    "* Expand the endemicity and epbc status codes"
+    "* Expand the endemicity and epbc status codes\n",
+    "* Map sourceStatus to status"
    ],
    "metadata": {
     "collapsed": false,
@@ -242,6 +232,11 @@
     "conservationlist = conservationlist.rename(columns={'Code_description':'EPBC Status'})\n",
     "#conservationlist.drop(['EPBC_status'],axis=1,inplace=True)\n",
     "conservationlist.drop(['Unnamed: 0'],axis=1,inplace=True)\n",
+    "\n",
+    "# Map statuses\n",
+    "state = 'QLD'\n",
+    "fname = statusDir + state + \"-codes.csv\"\n",
+    "conservationlist = lf.map_status(state, fname, conservationlist)\n",
     "conservationlist"
    ],
    "metadata": {
@@ -622,7 +617,6 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
-    "import list_functions as lf\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n"
    ],
