--- a/source-code/py-notebook/Report-Change-Logs.ipynb
+++ b/source-code/py-notebook/Report-Change-Logs.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "projectdir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
-    "changedir = projectdir + \"analysis/change-log/\"\n",
+    "changedir = \"analysis/change-log/\"\n",
     "import datetime\n",
     "import os\n",
     "import sys\n",
@@ -63,10 +63,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "ltype=\"C\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ltype=\"C\"\n",
     "# ACT Conservation\n",
     "filename = \"ACT-conservation.csv\"\n",
     "testdr = \"dr649\"\n",
@@ -84,8 +97,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_changelist: Test -  dr656 Prod -  dr656\n",
+      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr656?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "download_ala_list:  https://lists-test.ala.org.au/ws/speciesListItems/dr656?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "                                             name  \\\n82                   Acanthiza pusilla archibaldi   \n139                        Androcalva perkinsiana   \n179                              Asplenium wildii   \n182   Asterolasia asteriscophora subsp. albiflora   \n238         Bertya sp. Clouds Creek (M. Fatemi 4)   \n...                                           ...   \n1895                        Vincetoxicum forsteri   \n1896                        Vincetoxicum rupicola   \n1897                        Vincetoxicum woollsii   \n1923                               Zanda baudinii   \n1924                            Zanda latirostris   \n\n                   commonName_new  \\\n82    King Island Brown Thornbill   \n139                          None   \n179                          None   \n182               White Star-bush   \n238                          None   \n...                           ...   \n1895                          NaN   \n1896                          NaN   \n1897                          NaN   \n1923                          NaN   \n1924                          NaN   \n\n                               scientificName_new             status_new  \\\n82                   Acanthiza pusilla archibaldi             Endangered   \n139                        Androcalva perkinsiana  Critically Endangered   \n179                              Asplenium wildii             Vulnerable   \n182   Asterolasia asteriscophora subsp. albiflora  Critically Endangered   \n238          Bertya sp. Clouds Creek (M.Fatemi 4)             Endangered   \n...                                           ...                    ...   \n1895                                          NaN                    NaN   \n1896                                          NaN                    NaN   \n1897                                          NaN                    NaN   \n1923                                          NaN                    NaN   \n1924                                          NaN                    NaN   \n\n     listUpdate               commonName_old     scientificName_old  \\\n82        added                          NaN                    NaN   \n139       added                          NaN                    NaN   \n179       added                          NaN                    NaN   \n182       added                          NaN                    NaN   \n238       added                          NaN                    NaN   \n...         ...                          ...                    ...   \n1895    removed                         None  Vincetoxicum forsteri   \n1896    removed                         None  Vincetoxicum rupicola   \n1897    removed        Cryptic Forest Twiner     Tylophora woollsii   \n1923    removed      Baudin's Black-cockatoo         Zanda baudinii   \n1924    removed  Short-billed Black-cockatoo      Zanda latirostris   \n\n      status_old  \n82           NaN  \n139          NaN  \n179          NaN  \n182          NaN  \n238          NaN  \n...          ...  \n1895  Endangered  \n1896  Endangered  \n1897  Endangered  \n1923  Endangered  \n1924  Endangered  \n\n[71 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>commonName_new</th>\n      <th>scientificName_new</th>\n      <th>status_new</th>\n      <th>listUpdate</th>\n      <th>commonName_old</th>\n      <th>scientificName_old</th>\n      <th>status_old</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>82</th>\n      <td>Acanthiza pusilla archibaldi</td>\n      <td>King Island Brown Thornbill</td>\n      <td>Acanthiza pusilla archibaldi</td>\n      <td>Endangered</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>139</th>\n      <td>Androcalva perkinsiana</td>\n      <td>None</td>\n      <td>Androcalva perkinsiana</td>\n      <td>Critically Endangered</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>179</th>\n      <td>Asplenium wildii</td>\n      <td>None</td>\n      <td>Asplenium wildii</td>\n      <td>Vulnerable</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>182</th>\n      <td>Asterolasia asteriscophora subsp. albiflora</td>\n      <td>White Star-bush</td>\n      <td>Asterolasia asteriscophora subsp. albiflora</td>\n      <td>Critically Endangered</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>238</th>\n      <td>Bertya sp. Clouds Creek (M. Fatemi 4)</td>\n      <td>None</td>\n      <td>Bertya sp. Clouds Creek (M.Fatemi 4)</td>\n      <td>Endangered</td>\n      <td>added</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1895</th>\n      <td>Vincetoxicum forsteri</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>removed</td>\n      <td>None</td>\n      <td>Vincetoxicum forsteri</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>1896</th>\n      <td>Vincetoxicum rupicola</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>removed</td>\n      <td>None</td>\n      <td>Vincetoxicum rupicola</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>1897</th>\n      <td>Vincetoxicum woollsii</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>removed</td>\n      <td>Cryptic Forest Twiner</td>\n      <td>Tylophora woollsii</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>1923</th>\n      <td>Zanda baudinii</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>removed</td>\n      <td>Baudin's Black-cockatoo</td>\n      <td>Zanda baudinii</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>1924</th>\n      <td>Zanda latirostris</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>removed</td>\n      <td>Short-billed Black-cockatoo</td>\n      <td>Zanda latirostris</td>\n      <td>Endangered</td>\n    </tr>\n  </tbody>\n</table>\n<p>71 rows × 8 columns</p>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EPBC Conservation\n",
     "filename = \"EPBC-conservation.csv\"\n",
@@ -259,7 +297,20 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ltype=\"S\"\n",
+    "ltype=\"S\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "# ACT Sensitive\n",
     "filename = \"ACT-sensitive.csv\"\n",
     "testdr = \"dr2627\"\n",
