--- a/source-code/py-notebook/NT-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NT-conservation-sensitive.ipynb
@@ -50,14 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
-    "sourcedir = \"source-data/NT\"\n",
+    "sourcedir = \"source-data/NT/\"\n",
+    "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\""
    ],
@@ -82,10 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "data = pd.read_excel(sourcedir + \"northernTerritoryConservationStatusList-Plants.xlsx\")"
+    "data = pd.read_excel(projectDir + sourcedir + \"ntConservationStatusList-Plants.xlsx\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "data = data.rename(columns=\n",
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "6dfe07ec",
    "metadata": {
     "pycharm": {
@@ -135,133 +136,10 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>family</th>\n",
-       "      <th>Scientific name</th>\n",
-       "      <th>status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hymenophyllaceae</td>\n",
-       "      <td>Abrodictyum obscurum</td>\n",
-       "      <td>Endangered</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fabaceae</td>\n",
-       "      <td>Acacia equisetifolia</td>\n",
-       "      <td>Critically endangered</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Fabaceae</td>\n",
-       "      <td>Acacia latzii \\nLatz's wattle</td>\n",
-       "      <td>Vulnerable</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Fabaceae</td>\n",
-       "      <td>Acacia peuce\\nWaddy-wood</td>\n",
-       "      <td>Endangered</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Fabaceae</td>\n",
-       "      <td>Acacia pickardii\\nBirds nest wattle</td>\n",
-       "      <td>Listed nationally but not under NT legislation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>Araceae</td>\n",
-       "      <td>Typhonium taylori</td>\n",
-       "      <td>Endangered</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>Lentibulariaceae</td>\n",
-       "      <td>Utricularia dunstaniae</td>\n",
-       "      <td>Vulnerable</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>Lentibulariaceae</td>\n",
-       "      <td>Utricularia singeriana</td>\n",
-       "      <td>Vulnerable</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>Annonaceae</td>\n",
-       "      <td>Xylopia monosperma</td>\n",
-       "      <td>Endangered</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>Orchidaceae</td>\n",
-       "      <td>Zeuxine oblonga</td>\n",
-       "      <td>Vulnerable</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>84 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              family                      Scientific name  \\\n",
-       "0   Hymenophyllaceae                 Abrodictyum obscurum   \n",
-       "1           Fabaceae                 Acacia equisetifolia   \n",
-       "2           Fabaceae        Acacia latzii \\nLatz's wattle   \n",
-       "3           Fabaceae             Acacia peuce\\nWaddy-wood   \n",
-       "4           Fabaceae  Acacia pickardii\\nBirds nest wattle   \n",
-       "..               ...                                  ...   \n",
-       "79           Araceae                    Typhonium taylori   \n",
-       "80  Lentibulariaceae               Utricularia dunstaniae   \n",
-       "81  Lentibulariaceae               Utricularia singeriana   \n",
-       "82        Annonaceae                   Xylopia monosperma   \n",
-       "83       Orchidaceae                      Zeuxine oblonga   \n",
-       "\n",
-       "                                            status  \n",
-       "0                                       Endangered  \n",
-       "1                            Critically endangered  \n",
-       "2                                       Vulnerable  \n",
-       "3                                       Endangered  \n",
-       "4   Listed nationally but not under NT legislation  \n",
-       "..                                             ...  \n",
-       "79                                      Endangered  \n",
-       "80                                      Vulnerable  \n",
-       "81                                      Vulnerable  \n",
-       "82                                      Endangered  \n",
-       "83                                      Vulnerable  \n",
-       "\n",
-       "[84 rows x 3 columns]"
-      ]
+      "text/plain": "              family                      Scientific name  \\\n0   Hymenophyllaceae                 Abrodictyum obscurum   \n1           Fabaceae                 Acacia equisetifolia   \n2           Fabaceae        Acacia latzii \\nLatz's wattle   \n3           Fabaceae             Acacia peuce\\nWaddy-wood   \n4           Fabaceae  Acacia pickardii\\nBirds nest wattle   \n..               ...                                  ...   \n79           Araceae                    Typhonium taylori   \n80  Lentibulariaceae               Utricularia dunstaniae   \n81  Lentibulariaceae               Utricularia singeriana   \n82        Annonaceae                   Xylopia monosperma   \n83       Orchidaceae                      Zeuxine oblonga   \n\n                                            status  \n0                                       Endangered  \n1                            Critically endangered  \n2                                       Vulnerable  \n3                                       Endangered  \n4   Listed nationally but not under NT legislation  \n..                                             ...  \n79                                      Endangered  \n80                                      Vulnerable  \n81                                      Vulnerable  \n82                                      Endangered  \n83                                      Vulnerable  \n\n[84 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>family</th>\n      <th>Scientific name</th>\n      <th>status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Hymenophyllaceae</td>\n      <td>Abrodictyum obscurum</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Fabaceae</td>\n      <td>Acacia equisetifolia</td>\n      <td>Critically endangered</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Fabaceae</td>\n      <td>Acacia latzii \\nLatz's wattle</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Fabaceae</td>\n      <td>Acacia peuce\\nWaddy-wood</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Fabaceae</td>\n      <td>Acacia pickardii\\nBirds nest wattle</td>\n      <td>Listed nationally but not under NT legislation</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>79</th>\n      <td>Araceae</td>\n      <td>Typhonium taylori</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>80</th>\n      <td>Lentibulariaceae</td>\n      <td>Utricularia dunstaniae</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>81</th>\n      <td>Lentibulariaceae</td>\n      <td>Utricularia singeriana</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>82</th>\n      <td>Annonaceae</td>\n      <td>Xylopia monosperma</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>83</th>\n      <td>Orchidaceae</td>\n      <td>Zeuxine oblonga</td>\n      <td>Vulnerable</td>\n    </tr>\n  </tbody>\n</table>\n<p>84 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,6 +147,29 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Endangered', 'Critically endangered', 'Vulnerable',\n       'Listed nationally but not under NT legislation'], dtype=object)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['status'].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -370,10 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(sourcedir + \"/northernTerritoryConservationStatusList-Animals.csv\")"
+    "data1 = pd.read_excel(projectDir + sourcedir + \"ntConservationStatusList-Animals.xlsx\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -384,12 +285,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Check datasets size\n",
     "print (\"data is \",data.shape)\n",
     "print (\"data 1 is \",data1.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Endangered', 'Critically endangered', 'Vulnerable',\n       'Listed nationally but not under NT legislation'], dtype=object)"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['status'].unique()"
    ],
    "metadata": {
     "collapsed": false,
@@ -417,6 +341,23 @@
    "outputs": [],
    "source": [
     "result = pd.concat([data, data1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "## Map statuses\n",
+    "state = 'NT'\n",
+    "fname = statusDir + state + \"-codes.csv\"\n",
+    "result = lf.map_status(state, fname, result)"
    ],
    "metadata": {
     "collapsed": false,
