--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -44,24 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
-    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
-    "\n",
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
     "\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
     "import list_functions as lf\n",
     "\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
     "vicchecklisturl = \"https://vba.dse.vic.gov.au/vba/downloadVSC.do\" # gets a csv\n",
-    "vicchecklist = pd.read_csv(projectDir + \"source-data/VIC/Species-Checklist.csv\",encoding='cp1252')\n"
+    "vicchecklist = pd.read_csv(projectDir + \"source-data/VIC/Species-Checklist.csv\",encoding='cp1252')"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,13 +95,13 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "22182    01/01/2010\n10432    01/02/2012\n11265    01/02/2018\n12493    01/02/2021\n18298    01/03/2017\n            ...    \n13112    31/10/2016\n159      31/10/2017\n10501    31/10/2018\n11206    31/10/2020\n15567    31/10/2022\nName: LAST_MOD, Length: 899, dtype: object"
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Drop columns\n",
@@ -167,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "                            0\nsensitive list count      136\nconservation list count  1999",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>sensitive list count</th>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>conservation list count</th>\n      <td>1999</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +195,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\oco115\\PycharmProjects\\authoritative-lists\\source-code\\includes\\list_functions.py:108: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dframe['status'] = dframe['sourceStatus'].map(code_status_dict)\n"
+     ]
+    }
+   ],
+   "source": [
+    "conservationList['status'].unique()\n",
+    "## Map statuses\n",
+    "state = 'VIC'\n",
+    "fname = statusDir + state + \"-codes.csv\"\n",
+    "conservationList= lf.map_status(state, fname, conservationList)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Critically Endangered', 'Vulnerable', 'Endangered', nan],\n      dtype=object)"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensitiveList['status'].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Write to CSV\n",
+    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",  encoding=\"UTF-8\", index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "outputs": [
     {
@@ -207,8 +275,6 @@
     }
    ],
    "source": [
-    "#Write to CSV\n",
-    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",  encoding=\"UTF-8\", index=False)\n",
     "sensitiveList.to_csv(projectDir + sdataDir + \"VIC-sensitive.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print('Finished processing')"
    ],
